Updates from Overleaf

--- a/before meetings/250917_Haile.tex
+++ b/before meetings/250917_Haile.tex
@@ -92,7 +92,7 @@
 \begin{frame}{Previous meeting}
 
  \begin{itemize}
-        \item Discussed the possible research questions including affecting the level of information. 
+        \item Discussed the possible research questions including: what is the impact of information provision on equilibrium outcomes. 
         \item  
         \item  
 \end{itemize}
@@ -103,7 +103,7 @@
 
  \begin{itemize}
         \item There is selection among firms. 
-        \item Discuss model to study 
+        \item Discuss model to study information issues. 
 \end{itemize}
 \end{frame}
 
@@ -116,20 +116,44 @@ Selection? some firms better at predicting?
      %\caption{Enter Caption}
      \label{fig:placeholder}
  \end{figure}
+Claim: one needs to observe the information observed by the firm to determine if there is selection -> 
+
+In an exchange 
 \end{frame}
 
 
-\begin{frame}{Model}
-Selection? some firms better at predicting? 
+\begin{frame}{Model(1)}
+\begin{itemize}
+    \item Nested logit model of a selection market (costs depend on unobserved health). 
+    \item Ruled out selection across insurers by assuming mean utilities: $\delta_j - \alpha p_j + f(h)$
+    \item Results: 
+    \begin{enumerate}
+        \item Selection into the market generates a higher average than marginal cost. 
+        \item If the cost functions are not firm specific the average costs across firms are the same 
+        \item Marginal costs are different even when 
+        If the cost functions are not firm specific the average costs across firms are the same 
+    \end{enumerate}
+\end{itemize}
+\end{frame}
+
+
+\begin{frame}{Model(2)}
  \begin{figure}
      \centering
-     \includegraphics[width=0.6\linewidth]{figures//IE4/IE4_survival_curves_by_age_top_firms.png}
+     \includegraphics[width=0.6\linewidth]{figures/simulations/sigma_panels.png}
      %\caption{Enter Caption}
      \label{fig:placeholder}
  \end{figure}
 \end{frame}
 
+\begin{frame}{Caveats}
+\begin{itemize}
+    \item The model is appropriate to study  a particular pre-defined segment of the population.
+    \item Is not the correct model to do comparative statics on $\sigma$. When changing $\sigma$ we are changing the cost distribution over the whole population, hence it is not correct to interpret it as just an informational intervention. 
+\end{itemize}
 
+
+\end{frame}
 
 
 
