Updates from Overleaf

--- a/before meetings/250917_Haile.tex
+++ b/before meetings/250917_Haile.tex
@@ -93,8 +93,7 @@
 
  \begin{itemize}
         \item Discussed the possible research questions including: what is the impact of information provision on equilibrium outcomes. 
-        \item  
-        \item  
+        
 \end{itemize}
 \end{frame}
 
@@ -109,16 +108,20 @@
 
 
 \begin{frame}{Selection}
-Selection? some firms better at predicting? 
+
  \begin{figure}
      \centering
      \includegraphics[width=0.6\linewidth]{figures//IE4/IE4_survival_curves_by_age_top_firms.png}
      %\caption{Enter Caption}
      \label{fig:placeholder}
  \end{figure}
-Claim: one needs to observe the information observed by the firm to determine if there is selection -> 
+Selection (only on unobservables) seems interesting to me. 
 
-In an exchange 
+To show selection on unobservables one needs to observe all the variables observed by the firms. [advantage of our data]
+
+%Claim: one needs to observe the information observed by the firm to determine if there is selection -> 
+
+%In an exchange 
 \end{frame}
 
 
@@ -140,7 +143,7 @@ In an exchange
 \begin{frame}{Model(2)}
  \begin{figure}
      \centering
-     \includegraphics[width=0.6\linewidth]{figures/simulations/sigma_panels.png}
+     \includegraphics[width=0.6\linewidth]{figures/simulations/sigma_panels_2firms.png}
      %\caption{Enter Caption}
      \label{fig:placeholder}
  \end{figure}
