Update tables and meeting notes; add Charles meeting PDF
Rounded and simplified values in IE5_reg_by_rank.tex and IE5_reg_by_rank(2).tex for improved readability. Expanded and reorganized meeting notes in 250929_Charles.tex, including new sections on learning and model discussion. Added corresponding PDF for the Charles meeting. Updated empirical3.pdf and related build artifacts.

--- a/before meetings/250929_Charles.tex
+++ b/before meetings/250929_Charles.tex
@@ -89,30 +89,59 @@
 
 \begin{frame}{Previous meeting}
 \begin{itemize}
-        \item We discussed the variables used in the mortality tables according to the level of sophistication of the firm. Some issues are: 
-        \begin{itemize}
-            \item I observe year-month, but interest rates can change within a month. 
-            \item There are comissions that I do not know how to account for. 
-            \item 
-        \end{itemize}
-        \item \textcolor{red}{I should try to disentangle whether there are shoppers and non shoppers or whether there is firm-learning }       
+        \item We discussed the variables used in the mortality tables according to the level of sophistication of the firm. 
+ 
+        \item I should try to disentangle whether there are shoppers and non shoppers or whether there is firm-learning       
 
 \end{itemize}
 \end{frame}
 
 
-\begin{frame}{This meeting: research question}
+\begin{frame}{This meeting}
 \begin{itemize}
+        \item Problem to find pricing determinants (variables that enter mortality tables). 
+     \begin{itemize}
+            \item I observe year-month, but interest rates can change within a month. 
+            \item There are comissions that I do not know how to account for. 
+            \item Functional form issues
+        \end{itemize}
         \item Discuss model sent by email. 
         
-        \item There is difference in survival rates among firms. 
+        \item Discuss learning and discrimination. 
+\end{itemize}
+\end{frame}
+ 
+
+
+\begin{frame}{Learning}
+\begin{itemize}
+        \item Firms increase their offers more the higher the initial offers of the competitors. 
         
-        \item Is there learning? -> still to explore. 
+        
+        \item The probability of making an external offer is decreasing on the value of the initial offers of the competitors. 
+        
+        \item There is bunching around the maximum initial offer. Firms might try to be the highest offer.  
 \end{itemize}
 \end{frame}
  
 
 
 
+\begin{frame}%{Learning}
+\input{../Tables/IE7/IE7_learning_regressions.tex}
+\end{frame}
 
+\begin{frame}{Learning(1)}
+  \begin{figure}[H]
+\caption{}
+\label{fig:ie7_3}
+\centering{}%
+\begin{tabular}{cc}
+\includegraphics[scale=0.39]{../figures/IE7/IE7_hist_bunching_max(2).png} 
+\end{tabular}
+\end{figure}
+\end{frame}
+
+
+ 
 \end{document}
