Updates from Overleaf

--- a/before meetings/2509..._Charles.tex
+++ b/before meetings/2509..._Charles.tex
@@ -107,11 +107,15 @@
         
         \item There is difference in survival rates among firms. 
         
-        \item Is there learning? -> still to explore. 
 \end{itemize}
 \end{frame}
  
 
+
+\begin{frame}{Learning}
+\input{../Tables}
+\end{frame}
+ 
 
 
 
